Added localized texts.

--- a/myResume/presentation/resources/en.lproj/Localizable.strings
+++ b/myResume/presentation/resources/en.lproj/Localizable.strings
@@ -5,6 +5,10 @@
   Created by Daniel Martínez Muñoz on 14/4/23.
   
 */
-"tabs.experience.title" = "Works";
+// Tabs
+"tabs.experience.title" = "Career";
 "tabs.skills.title" = "Skills";
 "tabs.aboutMe.title" = "About me";
+// Career
+"career.tabs.works.title" = "Works";
+"career.tabs.sideProjects.title" = "Side Projects";
