--- a/myResume/presentation/resources/en.lproj/Localizable.strings
+++ b/myResume/presentation/resources/en.lproj/Localizable.strings
@@ -14,3 +14,12 @@
 "career.tabs.sideProjects.title" = "Side Projects";
 // Works
 "works.timelapse.current" = "current";
+// Pet projects
+"petProjects.downloads.%@" = "%@ downloads";
+"petProjects.stores.appStore" = "App Store";
+"petProjects.stores.googlePlay" = "Play Store";
+"petProjects.myWardrobe.title" = "My Wardrobe - All your clothes";
+"petProjects.myWardrobe.subtitle" = "All your clothes classified, create combinations and plan them in your schedule";
+"petProjects.myWardrobe.link.appStore" = "https://apps.apple.com/us/app/mi-armario-organiza-tu-ropa/id1531657287";
+"petProjects.myWardrobe.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.wardrobe&hl=en&gl=US";
+
