--- a/myResume/presentation/resources/es.lproj/Localizable.strings
+++ b/myResume/presentation/resources/es.lproj/Localizable.strings
@@ -14,3 +14,11 @@
 "career.tabs.sideProjects.title" = "Mis Proyectos";
 // Works
 "works.timelapse.current" = "ahora";
+// Pet projects
+"petProjects.downloads.%@" = "%@ descargas";
+"petProjects.stores.appStore" = "App Store";
+"petProjects.stores.googlePlay" = "Play Store";
+"petProjects.myWardrobe.title" = "Mi Armario - Organiza tu ropa";
+"petProjects.myWardrobe.subtitle" = "Ten toda tu ropa clasificada, crea combinaciones y planifícalas en tu agenda";
+"petProjects.myWardrobe.link.appStore" = "https://apps.apple.com/es/app/mi-armario-organiza-tu-ropa/id1531657287";
+"petProjects.myWardrobe.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.wardrobe&hl=es_419&gl=ES";
