--- a/myResume/presentation/resources/en.lproj/Localizable.strings
+++ b/myResume/presentation/resources/en.lproj/Localizable.strings
@@ -18,8 +18,17 @@
 "petProjects.downloads.%@" = "%@ downloads";
 "petProjects.stores.appStore" = "App Store";
 "petProjects.stores.googlePlay" = "Play Store";
+// MyWardrobe
 "petProjects.myWardrobe.title" = "My Wardrobe - All your clothes";
 "petProjects.myWardrobe.subtitle" = "All your clothes classified, create combinations and plan them in your schedule";
 "petProjects.myWardrobe.link.appStore" = "https://apps.apple.com/us/app/mi-armario-organiza-tu-ropa/id1531657287";
 "petProjects.myWardrobe.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.wardrobe&hl=en&gl=US";
-
+// FoodCalendar
+"petProjects.foodCalendar.title" = "Food in Season";
+"petProjects.foodCalendar.subtitle" = "Find out when is the best time to enjoy your favorite foods. Includes fruits, vegetables, fish, and shellfish.";
+"petProjects.foodCalendar.link.appStore" = "https://apps.apple.com/us/app/calendario-de-alimentos/id1532078962";
+// Gifts
+"petProjects.gifts.title" = "Gifts - My Secret Santa";
+"petProjects.gifts.subtitle" = "All your Secret Santa giveaways";
+"petProjects.gifts.link.appStore" = "https://apps.apple.com/us/app/regalos-mi-amigo-invisible/id1615811628";
+"petProjects.gifts.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.app.gifts&hl=en&gl=US";
