--- a/myResume/presentation/resources/es.lproj/Localizable.strings
+++ b/myResume/presentation/resources/es.lproj/Localizable.strings
@@ -18,7 +18,17 @@
 "petProjects.downloads.%@" = "%@ descargas";
 "petProjects.stores.appStore" = "App Store";
 "petProjects.stores.googlePlay" = "Play Store";
+// MyWardrobe
 "petProjects.myWardrobe.title" = "Mi Armario - Organiza tu ropa";
 "petProjects.myWardrobe.subtitle" = "Ten toda tu ropa clasificada, crea combinaciones y planifícalas en tu agenda";
 "petProjects.myWardrobe.link.appStore" = "https://apps.apple.com/es/app/mi-armario-organiza-tu-ropa/id1531657287";
 "petProjects.myWardrobe.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.wardrobe&hl=es_419&gl=ES";
+// FoodCalendar
+"petProjects.foodCalendar.title" = "Calendario de Alimentos";
+"petProjects.foodCalendar.subtitle" = "Descubre cuál es la mejor época para disfrutar de tus alimentos favoritos. Incluye frutas, verduras, pescados y mariscos.";
+"petProjects.foodCalendar.link.appStore" = "https://apps.apple.com/es/app/calendario-de-alimentos/id1532078962";
+// Gifts
+"petProjects.gifts.title" = "Regalos - Mi amigo invisible";
+"petProjects.gifts.subtitle" = "Todos tus sorteos de amigo invisible";
+"petProjects.gifts.link.appStore" = "https://apps.apple.com/es/app/regalos-mi-amigo-invisible/id1615811628";
+"petProjects.gifts.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.app.gifts&hl=es_419&gl=ES";
