--- a/myResume/presentation/resources/es.lproj/Localizable.strings
+++ b/myResume/presentation/resources/es.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 // Works
 "works.timelapse.current" = "ahora";
 // Pet projects
-"petProjects.downloads.%@" = "%@ descargas";
+"petProjects.downloads.%@" = "+%@ descargas";
 "petProjects.stores.appStore" = "App Store";
 "petProjects.stores.googlePlay" = "Play Store";
 // MyWardrobe
