--- a/myResume/presentation/resources/es.lproj/Localizable.strings
+++ b/myResume/presentation/resources/es.lproj/Localizable.strings
@@ -15,6 +15,7 @@
 // Works
 "works.timelapse.current" = "ahora";
 // Pet projects
+"petProjects.title" = "Estas aplicaciones han sido desarrolladas por completo por mí, desde su concepto y diseño hasta su publicación en las distintas tiendas de aplicaciones.";
 "petProjects.downloads.%@" = "+%@ descargas";
 "petProjects.stores.appStore" = "App Store";
 "petProjects.stores.googlePlay" = "Play Store";
