--- a/myResume/presentation/resources/en.lproj/Localizable.strings
+++ b/myResume/presentation/resources/en.lproj/Localizable.strings
@@ -9,18 +9,57 @@
 "tabs.experience.title" = "Career";
 "tabs.skills.title" = "Skills";
 "tabs.aboutMe.title" = "About me";
+// Navigation
+"navigation.back" = "Go back";
+// Data
+"data.origin.localCache" = "This data has been loaded from the local cache.";
+"data.origin.remote" = "This data has been loaded from the remote API.";
 // Career
 "career.tabs.works.title" = "Works";
 "career.tabs.sideProjects.title" = "Side Projects";
 // Works
 "works.timelapse.current" = "current";
+// Work Details
+"workDetails.timelapse %@ %@" = "from %@ until %@";
+"workDetails.timelapse.total %@ %@" = "%@ year(s) and %@ month(s)";
+"workDetails.timelapse.current" = "now";
+"workDetails.summary" = "Summary";
+"workDetails.goalsAchieved" = "Goals achieved";
+// Work - Loycus - Mobile
+"works.loycus.mobile.title" = "Mobile Teach Lead";
+"works.loycus.mobile.summary" = "";
+"works.loycus.mobile.goalsAchieved.0" = "";
+"works.loycus.mobile.goalsAchieved.1" = "";
+"works.loycus.mobile.goalsAchieved.2" = "";
+// Work - Loycus - iOS
+"works.loycus.ios.title" = "Senior iOS Engineer";
+"works.loycus.ios.summary" = "";
+"works.loycus.ios.goalsAchieved.0" = "Development of the application for iOS.";
+"works.loycus.ios.goalsAchieved.1" = "";
+"works.loycus.ios.goalsAchieved.2" = "";
+// Work - Infinia - Mobile
+"works.infinia.mobile.title" = "Mobile Teach Lead";
+"works.infinia.mobile.summary" = "";
+"works.infinia.mobile.goalsAchieved.0" = "Leadership of the development of an own SDK in Swift (iOS) and Kotlin (Android).";
+"works.infinia.mobile.goalsAchieved.1" = "Support for the integration of the SDK in leading companies in their sector.";
+"works.infinia.mobile.goalsAchieved.2" = "Development of applications for iOS and Android.";
+// Work - Infinia - iOS
+"works.infinia.ios.title" = "iOS Tech Lead";
+"works.infinia.ios.summary" = "Responsible for the development of an own SDK.";
+"works.infinia.ios.goalsAchieved.0" = "Leadership of the development of an own SDK from scratch in Swift (iOS).";
+"works.infinia.ios.goalsAchieved.1" = "Support for the integration of the SDK in leading companies in their sector.";
+"works.infinia.ios.goalsAchieved.2" = "Development of applications for iOS and Android.";
+// Work - Intelygenz - iOS
+"works.intelygenz.ios.title" = "Senior iOS Engineer";
+"works.intelygenz.ios.summary" = "";
+"works.intelygenz.ios.goalsAchieved.0" = "Leadership of the development of the iOS application for a leading company in the electrical sector.";
+"works.intelygenz.ios.goalsAchieved.1" = "Development of an application for iOS and watchOS for a leading company in the security sector.";
+"works.intelygenz.ios.goalsAchieved.2" = "Team development of several applications for iOS.";
 // Pet projects
 "petProjects.title" = "These applications have been completely developed by me, from their concept and design to their publication in the various app stores.";
 "petProjects.downloads.%@" = "+%@ downloads";
 "petProjects.stores.appStore" = "App Store";
 "petProjects.stores.googlePlay" = "Play Store";
-"petProjects.origin.localCache" = "This data has been loaded from the local cache.";
-"petProjects.origin.remote" = "This data has been loaded from the remote API.";
 // MyWardrobe
 "petProjects.myWardrobe.title" = "My Wardrobe - All your clothes";
 "petProjects.myWardrobe.subtitle" = "All your clothes classified, create combinations and plan them in your schedule";
@@ -36,6 +75,9 @@
 "petProjects.gifts.link.appStore" = "https://apps.apple.com/us/app/regalos-mi-amigo-invisible/id1615811628";
 "petProjects.gifts.link.playStore" = "https://play.google.com/store/apps/details?id=info.danielmartinez.app.gifts&hl=en&gl=US";
 // About me
-"aboutMe.hello" = "Hello 👋!\n\nI am an iOS application developer with more than 15 years of work experience, the last 7 of them specialized in iOS, and I have worked on the development of more than 10 iOS applications, most of them in continuous deployment environments in the AppStore (fast-paced environment), typically with a 2-week release cycle.\n\nAs additional projects to my work, I have created 3 applications from scratch that are available in the iOS and Android stores. One of them has been downloaded more than 100,000 times since it was published.\n\nMy strengths are the organization of tasks, my high level of autonomy and the maximum commitment to fidelity in the implementation of functionalities.\n\nWhat motivates me the most and the main reason why I am passionate about my job is to be able to reach out and help anyone who owns a mobile phone, an iPhone, with my apps.\n\nI consider myself a good team worker, open to discuss the best way to develop a feature and collaborate to improve it.";
+"aboutMe.hello.title" = "Hello 👋!";
+"aboutMe.hello.text" = "I am Daniel Martínez, an iOS application developer with more than 15 years of work experience, the last 7 of them specialized in iOS, and I have worked on the development of more than 10 iOS applications, most of them in continuous deployment environments in the AppStore (fast-paced environment), typically with a 2-week release cycle.\n\nAs additional projects to my work, I have created 3 applications from scratch that are available in the iOS and Android stores. One of them has been downloaded more than 100,000 times since it was published.\n\nMy strengths are the organization of tasks, my high level of autonomy and the maximum commitment to fidelity in the implementation of functionalities.\n\nWhat motivates me the most and the main reason why I am passionate about my job is to be able to reach out and help anyone who owns a mobile phone, an iPhone, with my apps.\n\nI consider myself a good team worker, open to discuss the best way to develop a feature and collaborate to improve it.";
 "aboutMe.aboutThisProject.title" = "Sobre este proyecto";
 "aboutMe.aboutThisProject.text" = "This project was born to be able to show part of my skills as an iOS developer.\n\nI have used SwiftUI, UIKit, architectures like MVVM and VIPER, network connections to a REST API, etc... in a real project, leaving the code available for anyone interested to see.\n\nYou have much more information on how I created all this in the README of the project on GitHub.";
+// Errors
+"parser" = "An error occurred while getting the data";
